<resources>
    <string name="app_name">CalculateTip</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="_20_excellent">Excellent (20%)</string>
    <string name="round_up_tip">Round Up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="_15_good">Good (15%)</string>
    <string name="_18_nice">Nice (18%)</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="enter_cost">Service Cost</string>
</resources>